--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         width: 20vw;
         height: 100vw;
         display: grid;
-        justify-content:flex-start;
+        justify-content:start;
         
         background-color: sienna;
     }
