--- a/index.html
+++ b/index.html
@@ -2,21 +2,18 @@
 <html lang="en">
 <style>
     heading{
-        text-align: center;
+        background-color: sienna;
         display: grid;
-        grid-template-columns:auto auto;
-        justify-content: center;
-        background-color:sienna;
-        font-size: 2vw
+        height: 5vw;
     }
     space{
         display: grid;
-        grid-template-columns:75% 5%;
+        grid-template-columns:82% 5%;
     }
     content{
        
-        font-size:2vw;
-        width: 300%;
+       font-size: 4vw; 
+        width: 200%;
         height: 100vw;
         display: grid;
         justify-content:start;
@@ -55,11 +52,8 @@
     <title>Oodaye Oodua</title>
 </head>
 <body>
-    <heading>  
-        <div>
-            <img src="oodayeoodua_logo.png" alt="Oodaye Oodua logo" width="70%"; height="70%">  
-        </div>
-        <h1>OODAYE OODUA</h1>
+    <heading>
+        <img src="/oodayeoodua_logo.png" alt="Oodaye Oodua logo" width="8%" height="80%">
     </heading>
     
     <space>
@@ -71,13 +65,13 @@
     <content>
         <nav>
             <strong>
-                <a style="text-decoration: none; color: sienna; font-size: 3vw;" href="" target="_parent">HOME</a><br><br>
-                <a style="text-decoration: none; color: sienna; font-size: 3vw;" href="">NEWS</a><br><br>
-                <a style="text-decoration: none; color: sienna; font-size: 3vw;" href="">YORUBA</a><br><br>
-                <a style="text-decoration: none; color: sienna; font-size: 3vw;" href="">AFRICA</a><br><br>
-                <a style="text-decoration: none; color: sienna; font-size: 3vw;" href="">HISTORY</a><br><br>
-                <a style="text-decoration: none; color: sienna; font-size: 3vw;" href="">HERITAGE</a><br><br>
-                <a style="text-decoration: none; color: sienna; font-size: 3vw;" href="">DISCOVERY</a><br><br>
+                <a style="text-decoration: none; color: sienna; font-size: 2vw;" href="" target="_parent">HOME</a><br><br>
+                <a style="text-decoration: none; color: sienna; font-size: 2vw;" href="">NEWS</a><br><br>
+                <a style="text-decoration: none; color: sienna; font-size: 2vw;" href="">YORUBA</a><br><br>
+                <a style="text-decoration: none; color: sienna; font-size: 2vw;" href="">AFRICA</a><br><br>
+                <a style="text-decoration: none; color: sienna; font-size: 2vw;" href="">HISTORY</a><br><br>
+                <a style="text-decoration: none; color: sienna; font-size: 2vw;" href="">HERITAGE</a><br><br>
+                <a style="text-decoration: none; color: sienna; font-size: 2vw;" href="">DISCOVERY</a><br><br>
             </strong>
         </nav>
     </content>
