--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <style>
-    heading{
+    header{
         background-color: sienna;
-        display: grid;
-        height: 5vw;
+        display:grid;
+        grid-template-columns: auto auto auto;
     }
     space{
         display: grid;
@@ -52,9 +52,11 @@
     <title>Oodaye Oodua</title>
 </head>
 <body>
-    <heading>
-        <img src="/oodayeoodua_logo.png" alt="Oodaye Oodua logo" width="8%" height="80%">
-    </heading>
+    <header>
+        <img src="/oodayeoodua_logo.png" alt="Oodaye Oodua logo" width="100vw" height="80vw">
+        <h1 style="padding-left: 0%;">OODAYE OODUA</h1>
+        <img src="/oodayeoodua_logo.png" alt="Oodaye Oodua logo" width="100vw" height="80vw">
+    </header>
     
     <space>
        
