--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         background-color: sienna;
         display:grid;
         grid-template-columns: auto auto auto;
+        font-size: 50%;
     }
     space{
         display: grid;
@@ -54,7 +55,7 @@
 <body>
     <header>
         <img src="/oodayeoodua_logo.png" alt="Oodaye Oodua logo" width="100vw" height="80vw">
-        <h1 style="padding-left: 0%;">OODAYE OODUA</h1>
+        <h1 style="padding-top: 20px;">OODAYE OODUA</h1>
         <img src="/oodayeoodua_logo.png" alt="Oodaye Oodua logo" width="100vw" height="80vw">
     </header>
     
