--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <nav>
             <strong>
                 <a style="text-decoration: none; color: sienna; font-size: 2vw;" href="" target="_parent">HOME</a><br><br>
-                <a style="text-decoration: none; color: sienna; font-size: 2vw;" href="">NEWS</a><br><br>
+                <a style="text-decoration: none; color: sienna; font-size: 2vw;" href="/news/news.html" target="oodayeoodua">NEWS</a><br><br>
                 <a style="text-decoration: none; color: sienna; font-size: 2vw;" href="">YORUBA</a><br><br>
                 <a style="text-decoration: none; color: sienna; font-size: 2vw;" href="">AFRICA</a><br><br>
                 <a style="text-decoration: none; color: sienna; font-size: 2vw;" href="">HISTORY</a><br><br>
